# aws_cli

./: AWS_CLI_SERVICES_RESEARCH.md  COMMAND_PATTERNS_GUIDE.md  Cargo.toml  IMPLEMENTATION_CHECKLIST.md  QUICK_REFERENCE.md  README.md  RESEARCH_DOCUMENTATION_INDEX.md  RESEARCH_EXECUTIVE_SUMMARY.md
.github/workflows/: build_test_release.yml
src/: config.rs  error.rs  main.rs
src/commands/: dynamodb.rs  ec2.rs  iam.rs  lambda.rs  mod.rs  rds.rs  s3.rs  sso.rs  sts.rs
