[package]
name = "aws_cli"
version = "0.1.0"
edition = "2021"
description = "A CLI using AWS SDK, porting from original Python AWS CLI"
license = "MIT"

[[bin]]
name = "aws"
path = "src/main.rs"

[lib]
name = "aws_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1"
aws-sdk-iam = "1"
aws-sdk-s3 = "1"
aws-sdk-sts = "1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
