[package]
name = "aws_cli"
version = "0.1.9"
authors = ["Jaehyun Lee"]
edition = "2021"
description = "A CLI using AWS SDK, porting from original Python AWS CLI"
license = "MIT"
categories = ["command-line-interface", "command-line-utilities"]
repository = "https://github.com/DavidLee18/aws_cli"
readme = "README.md"
rust-version = "1.91.1"

[badges]
maintenance = { status = "experimental" }

[[bin]]
name = "aws"
path = "src/main.rs"

[profile.release]
# Optimize for size ("s" or "z"). "z" is generally the smallest.
opt-level = "s"
# Enable link-time optimization to allow the linker to remove unused code.
lto = true
# Strip all symbols from the binary (both debug and non-debug).
strip = true
# Reduce the number of codegen units to 1 for maximum optimization.
codegen-units = 1
# Abort on panic (removes panic unwinding information).
panic = "abort"

[lib]
name = "aws_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
aws-sdk-ec2 = "1"
aws-sdk-iam = "1"
aws-sdk-lambda = "1"
aws-sdk-rds = "1"
aws-sdk-s3 = "1"
aws-sdk-sso = "1"
aws-sdk-ssooidc = "1"
aws-sdk-sts = "1"
base64 = "0.21"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
